--- a/src/index.css
+++ b/src/index.css
@@ -61,7 +61,7 @@ canvas {
   text-decoration: underline;
 }
 
-.waypointCount {
+.waypoint-count {
   padding: 0.5em;
 }
 
@@ -75,3 +75,16 @@ canvas {
   padding: 0;
   height: 160px;
 }
+/* 
+.accordion-body {
+  overflow: hidden;
+  padding-left: 1em;
+  padding-right: 1em;
+  max-height: 1000px;
+  transition: max-height 0.5s ease-in-out;
+}
+
+.accordion-body[aria-expanded="true"] {
+  max-height: 0px;
+  transition: max-height 0.2s cubic-bezier(0, 1, 0, 1);
+} */
