--- a/src/index.css
+++ b/src/index.css
@@ -75,6 +75,16 @@ canvas {
   padding: 0;
   height: 160px;
 }
+
+.p-1 {
+  padding: 1em
+}
+
+.pv-half {
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
+}
+
 /* 
 .accordion-body {
   overflow: hidden;
