--- a/src/index.css
+++ b/src/index.css
@@ -9,9 +9,14 @@
   font-weight: bold;
 }
 
+small {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: smaller;
+}
+
 #dashboard {
   text-align: center;
-  margin: 0em 5em 0em 5em;
+  margin: 0em 2% 0em 2%;
 }
 
 .message {
