--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,32 @@
   src: url(./resources/Roboto-Bold.ttf), format("ttf");
   font-weight: bold;
 }
+@font-face {
+  font-family: "Ubuntu Mono";
+  src: url(./resources/UbuntuMono-Regular.ttf), format("ttf");
+  font-weight: normal;
+}
+@font-face {
+  font-family: "Ubuntu Mono";
+  src: url(./resources/UbuntuMono-Bold.ttf), format("ttf");
+  font-weight: bold;
+}
+@font-face {
+  font-family: "Ubuntu Mono";
+  src: url(./resources/UbuntuMono-Italic.ttf), format("ttf");
+  font-style: italic;
+}
+@font-face {
+  font-family: "Ubuntu Mono";
+  src: url(./resources/UbuntuMono-BoldItalic.ttf), format("ttf");
+  font-weight: bold;
+  font-style: italic;
+}
+@font-face {
+  font-family: "OpenSans";
+  src: url(./resources/OpenSans-Regular.ttf), format("ttf");
+  font-weight: normal;
+}
 
 small {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -32,26 +58,46 @@ code {
   font-family: Consolas;
 }
 
-#mapContainer {
-  display: inline-block;
-  text-align: right;
+#map-container {
+  /* display: block; */
+  /* text-align: right; */
+  position: relative;
+  width: 100%;
+  height: 100%
 }
 
-#mapBackground {
-  display: inline-block;
+#map-container #map-ui {
+  position: absolute;
+  top: 0;
+  left: 0;
+  /*
+  right: 0;
+  bottom: 0; */
+  /* z-index: 2; */
+}
+
+#map-ui .loading-label {
+  color: white;
+  font-family: Roboto;
+  font-size: medium;
+}
+
+#map-background {
+  /* display: inline-block; */
   position: absolute;
   z-index: 0;
+
 }
 
-#mapCanvas {
-  display: inline-block;
+#map-canvas {
+  /* display: inline-block; */
   position: relative;
-  z-index: 1;
+  /* z-index: 1; */
 }
 
-canvas {
+/* canvas {
   display: inline;
-}
+} */
 
 .link-button {
   background-color: transparent;
