--- a/src/index.css
+++ b/src/index.css
@@ -62,21 +62,29 @@ code {
   /* display: block; */
   /* text-align: right; */
   position: relative;
+/*   
   width: 100%;
-  height: 100%
+  height: 100% */
+  width: 600px;
+  height: 400px;
+  margin: auto;
 }
 
 #map-container #map-ui {
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 0px;
+  left: 0px;
   /*
   right: 0;
   bottom: 0; */
-  /* z-index: 2; */
 }
 
 #map-ui .loading-label {
+  position: absolute;
+  top: 250px;
+  left: 0px;
+  width: 600px;
+  text-align: center;
   color: white;
   font-family: Roboto;
   font-size: medium;
