--- a/src/index.css
+++ b/src/index.css
@@ -40,9 +40,17 @@ small {
   font-size: smaller;
 }
 
+.app {
+  height: 100vh;
+  width: 100vw;
+}
+
 #dashboard {
-  text-align: center;
-  margin: 0em 2% 0em 2%;
+  position: fixed;
+  inset: 1em;
+  display: flex;
+  flex-direction: column;
+  row-gap: 0.5em;
 }
 
 .message {
@@ -51,11 +59,6 @@ small {
 
 .m1 {
   margin: 1em;
-}
-
-code {
-  color: red;
-  font-family: Consolas;
 }
 
 #map-container {
@@ -191,13 +194,19 @@ td.ant-table-cell {
 }
 
 .system-info-collapse {
-  max-height: 600px;
-  overflow-y: auto;
-  scrollbar-width: thin;
+  /* max-height: 100%; */
+  /* overflow-y: auto; */
+  /* scrollbar-width: thin; */
+  max-height: 100%;
 }
 
 .ship-actions-item {
   width: 100%;
+}
+
+.small-heading {
+  font-weight: bold;
+  font-size: 11pt;
 }
 
 /* .market-list-panel {
