Add Survey list

--- a/src/index.css
+++ b/src/index.css
@@ -115,7 +115,7 @@ small {
   border: none;
   cursor: pointer;
   display: inline;
-  color: skyblue;
+  color: #1668DC;
   margin: 0;
   padding: 0;
 }
